@@ -20,8 +20,8 @@ import java.io.IOException;
 import java.util.Collection;
 import java.util.Iterator;
 
-import de.abelssoft.wordtools.jWordSplitter.AbstractWordSplitter;
-import de.abelssoft.wordtools.jWordSplitter.impl.GermanWordSplitter;
+import de.abelssoft.wordtools.jwordsplitter.AbstractWordSplitter;
+import de.abelssoft.wordtools.jwordsplitter.impl.GermanWordSplitter;
 
 /**
  * Simple command-line tool for decomposing German compound words.
