@@ -1,5 +1,7 @@
 
 2011-xx-yy (3.3-dev):
+	-renamed "jWordSplitter" in package path to "jwordsplitter" to be in accordance with 
+	 Java conventions 
 	-New file exceptionsGerman.txt added to JAR that contains special cases
 	 to overwrite the algorithm. With this we now get a correct split for e.g.
 	 Klimasünderecke -> Klima + Sünder + Ecke (used to be: Klima + Sünde + Recke)
